--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "private": true,
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently --kill-others \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.3",
+    "concurrently": "^7.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -15,6 +21,7 @@
     "http-proxy-middleware": "^2.0.6",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react-bootstrap": "^2.6.0"
   }
 }
